{g[target]})

  File "<string>", line 127
    print(f
         ^
SyntaxError: '(' was never closed
